# LetterLegend

./: LICENSE  README.md  gen_proto.ps1
apps/backend/: .env.example  .gitignore  Cargo.toml  build.rs
apps/backend/src/: config.rs  connection.rs  controller.rs  frame.rs  game.rs  lib.rs  lobby.rs  main.rs  model.rs  operation.rs  player.rs  router.rs  server.rs  service.rs
apps/backend/src/controller/: control.rs  controller.rs  game.rs  lobby.rs
apps/backend/src/controller/control/: connect.rs  disconnect.rs  heartbeat.rs
apps/backend/src/controller/game/: cancel.rs  exit.rs  finish_turn.rs  get_new_card.rs  set_tile.rs  start.rs
apps/backend/src/controller/lobby/: create.rs  join.rs  list.rs  quit.rs  ready.rs
apps/backend/src/game/: board.rs  card.rs  game.rs  game_player.rs  games.rs  tile.rs
apps/backend/src/lobby/: lobbies.rs  lobby.rs  lobby_info.rs  lobby_player.rs
apps/backend/src/model/: control.rs  game.rs  lobby.rs  player.rs  state.rs
apps/backend/src/model/control/: connect.rs  disconnect.rs  heartbeat.rs
apps/backend/src/model/error/: error.rs
apps/backend/src/model/game/: board.rs  broadcast.rs  cancel.rs  card.rs  cards.rs  exit.rs  finish_turn.rs  get_new_card.rs  hand_card.rs  set_tile.rs  start.rs  tile.rs  words.rs
apps/backend/src/model/lobby/: broadcast.rs  create.rs  join.rs  list.rs  lobby.rs  quit.rs  ready.rs
apps/backend/src/model/player/: player.rs  players.rs
apps/backend/src/proto/control/: connect.proto  (+2 more)
apps/backend/src/service/: config_service.rs  game_service.rs  lobby_service.rs  player_service.rs
(+102 files in other folders)
