[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["net", "rt-multi-thread", "rt", "io-util", "macros"] }

[build-dependencies]
prost-build = "0.11.8"
