[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
dotenvy = "0.15.6"
priority-queue = "1.3.1"
prost = "0.11.8"
rand = "0.8.5"
tokio = { version = "1.26.0", features = ["net", "rt-multi-thread", "rt", "io-util", "macros", "sync", "time", "fs"] }

[build-dependencies]
prost-build = "0.11.8"
